tests/common/snapshots/e2e_tests__common__visual_testing__LSP Rename__rename_mode_active.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Name]*                                                                     
    1 │ fn calculate(value: i32) -> i32 {                                      █
    2 │     let result = value * 2;                                            █
    3 │     println!("Value: {}", value);                                      █
    4 │     result                                                             █
    5 │ }                                                                      █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 0, Col 14 | Rename mode (Enter to confirm, ...  Help: Ctrl+/
